--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <br>
         <br>
-        <h1 class="FavoriteArtistMusic">Favorite Music</h1>
+        <h1 class="FavoriteArtistMusic">Favorite Artist & Music</h1>
         <br>
         <br>
         <div class="TopTracks-wrapper">
