--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 </p>
         </div>
     </div>
+    <!--movies-->
     <div class="TopMovies">
         <br>
         <h1 class="TopMovies-title">Favorite Movies</h1>
@@ -34,6 +35,7 @@
         </div>
         <br>
         <br>
+        <!--music-->
         <h1 class="FavoriteArtistMusic">Favorite Artist & Music</h1>
         <br>
         <br>
@@ -80,5 +82,78 @@
                 </div>
             </div>
         </div>
-        
+<!--Project-->
+        <div class="new-section">
+            <img src="PROJECT.png" alt="Example" class="new-section-image">
+            <div class="new-section-text">
+                <h2 class="new-section-title">PROJECT: Adventure Quest Worlds End Game Classes</h2>
+                <p class="new-section-description">
+                    This is an activity made in HTML, its about classes on a MMORPG game called Adventure Quest Worlds
+                <br>
+                    link: https://k4edehara.github.io/Kaedehara/
+                </p>
+            </div>
+        </div>
+<!--skills-->
+<div class="skills-sports-section">
+    <h2 class="skills-sports-title">Skills & Sports</h2>
+
+    <div class="skills-container">
+        <h3 class="skills-title">Programming Languages Learned</h3>
+        <ul class="skills-list">
+            <li>C++ (not good)</li>
+            <li>HTML (not good)</li>
+            <li>CSS (not good)</li>
+            <li>SQL (not good)</li>
+            <li>JAVA (not good)</li>
+        </ul>
+    </div>
+
+    <div class="sports-container">
+        <h3 class="sports-title">Sports I can Play(not good but I enjoy)</h3>
+        <ul class="sports-list">
+            <li>Volleyball</li>
+            <li>Table Tennis</li>
+            <li>Futsal</li>
+        </ul>
+    </div>
+</div>
+<!--contact me-->
+<!--footer-->
+<footer>
+    <script>
+        function openGoogleDoc() {
+            window.location.href = "https://docs.google.com/document/d/1WXbjTk4OQnrRy0-PeKLIrzXmEjPj6DLpO_1-_Y01FOg/edit?usp=sharing";
+        }
+    </script>
+    <button onclick="openGoogleDoc()" 
+            style="font-size: 20px; color: gold; text-align: center; 
+                   background-color: #8e44ad; border: none; 
+                   padding: 10px 20px; cursor: pointer; margin-top: 10px;">
+        Curriculum Vitae
+    </button>
+    <script>
+        function OpenFacebook(){
+            window.location.href = "https://www.facebook.com/profile.php?id=100084330090036";
+        }
+    </script>
+    <button onclick="OpenFacebook()" 
+    style="font-size: 20px; color: gold; text-align: center; 
+           background-color: #8e44ad; border: none; 
+           padding: 10px 20px; cursor: pointer; margin-top: 10px;">
+        Facebook
+    </button>
+    <script>
+        function OpenInsta(){
+            window.location.href = "https://www.instagram.com/_hirofumiii/";
+        }
+    </script>
+    <button onclick="OpenInsta()" 
+    style="font-size: 20px; color: gold; text-align: center; 
+           background-color: #8e44ad; border: none; 
+           padding: 10px 20px; cursor: pointer; margin-top: 10px;">
+        Instagram
+    </button>
+    <p style="margin-top: 15px; text-align: center; color: aliceblue;">&copy; 2024 Geli, Daniel P. All rights reserved.</p>
+</footer>
 </body>
